Fix overflow hidden bug with splash page post-relocation HEaderContainer into Art

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -215,7 +215,7 @@
 .demo-login-splash {
   width: 160px;
   padding: 8px;
-  margin: 5px;
+  margin: 30px 5px 5px 5px;
   border-radius: 3px;
   border: 1px dotted #7289DA;
   color: #7289DA;
